--- a/Swooh/app/src/main/res/layout/activity_main.xml
+++ b/Swooh/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,62 @@
                                              android:layout_height="match_parent"
                                              tools:context=".MainActivity">
 
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
+            android:id="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0" android:scaleType="centerCrop" android:contentDescription="TODO"/>
+    <ImageView
+            android:layout_width="137dp"
+            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
+            android:id="@+id/imageView2"
+            android:scaleType="fitCenter" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="16dp"/>
     <TextView
+            android:text="GO ALL IN"
+            android:layout_width="256dp"
+            android:layout_height="62dp"
+            android:id="@+id/textView2" android:textColor="?attr/colorAccent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="50sp"
+            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.495"/>
+    <TextView
+            android:text="ON GOING ALL OUT"
+            android:layout_width="241dp"
+            android:layout_height="33dp"
+            android:id="@+id/textView3"
+            android:textColor="?attr/colorBackgroundFloating" android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp"/>
+    <TextView
+            android:text="Find A Tean In Your City"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/textView5"
+            android:textColor="@android:color/background_light" android:textSize="18sp"
+            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="@+id/imageView"
+            android:layout_marginLeft="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="16dp" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+    <Button
+            android:text="GET STARTED"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.0"
+            android:textSize="18sp" android:textColor="@android:color/background_light"
+            android:background="@drawable/swooh_button"/>
 
 </android.support.constraint.ConstraintLayout>
