--- a/Swooh/app/src/main/res/layout/activity_main.xml
+++ b/Swooh/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
             android:id="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0" android:scaleType="centerCrop" android:contentDescription="TODO"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop" android:contentDescription="TODO"/>
     <ImageView
             android:layout_width="137dp"
             android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
             android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"/>
+            android:layout_marginLeft="16dp" app:layout_constraintHorizontal_bias="0.55"/>
     <TextView
             android:text="Find A Tean In Your City"
             android:layout_width="wrap_content"
