--- a/Swooh/app/src/main/res/layout/activity_league.xml
+++ b/Swooh/app/src/main/res/layout/activity_league.xml
@@ -5,34 +5,34 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LeagueActivity">
+        tools:context=".Controller.LeagueActivity">
     <ImageView
             android:layout_width="0dp"
             app:srcCompat="@drawable/desiredleaguebg"
-            android:id="@+id/imageView4"
+            android:id="@+id/nextClickedBtn"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_height="0dp" android:scaleType="centerCrop"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
-    />
+            android:contentDescription="@string/ground_image"/>
     <ImageView
             android:layout_width="135dp"
             android:layout_height="39dp" app:srcCompat="@drawable/swooshlogo"
-            android:id="@+id/imageView2"
+            android:id="@+id/league_logo"
             android:scaleType="fitCenter"
             app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="16dp" android:layout_marginTop="32dp"
-            app:layout_constraintHorizontal_bias="0.497"/>
+            app:layout_constraintHorizontal_bias="0.497" android:contentDescription="@string/app_image"/>
     <TextView
-            android:text="Desired League"
+            android:text="@string/desired_league"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/league_logo" android:textSize="18sp"
             android:textColor="@android:color/background_light"/>
     <LinearLayout
             android:orientation="vertical"
@@ -44,33 +44,41 @@
             android:layout_marginStart="16dp" android:layout_marginTop="55dp"
             app:layout_constraintTop_toBottomOf="@+id/textView">
         <ToggleButton
-                android:text="MENS"
+                android:text="@string/mens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/toggleButton11" android:textOff="MENS" android:textOn="MENS"
-                android:background="@drawable/swooh_toggle" android:textColor="@android:color/background_light"/>
+                android:id="@+id/mensLeagueBtn"
+                android:textOff="@string/mens"
+                android:textOn="@string/mens"
+                android:background="@drawable/swooh_toggle"
+                android:textColor="@android:color/background_light" android:onClick="onMensClicked"/>
         <ToggleButton
-                android:text="WOMENS"
+                android:text="@string/womens"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton12" android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp" android:textOff="WOMENS" android:textOn="WOMENS"
-                android:background="@drawable/swooh_toggle" android:textColor="@android:color/background_light"/>
+                android:layout_height="wrap_content" android:id="@+id/womenLeagueBtn" android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textOff="@string/womens"
+                android:textOn="@string/womens"
+                android:background="@drawable/swooh_toggle" android:textColor="@android:color/background_light"
+                android:onClick="onWomensClicked"/>
         <ToggleButton
-                android:text="CO-ED"
+                android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton13" android:textOff="CO-ED"
-                android:textOn="CO-ED" android:background="@drawable/swooh_toggle"
-                android:textColor="@android:color/background_light"/>
+                android:layout_height="wrap_content" android:id="@+id/coedLeagueBtn"
+                android:textOff="@string/co_ed"
+                android:textOn="@string/co_ed"
+                android:background="@drawable/swooh_toggle"
+                android:textColor="@android:color/background_light" android:onClick="onCoedClicked"/>
     </LinearLayout>
     <Button
-            android:text="Next"
+            android:text="@string/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/leagueNextBtn" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+            app:layout_constraintBottom_toBottomOf="@+id/nextClickedBtn"
             android:textColor="@android:color/background_light" app:layout_constraintHorizontal_bias="0.49"
             android:background="@drawable/swooh_button" android:layout_marginRight="32dp"
             android:layout_marginEnd="32dp" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp" android:onClick="leagueNextClicked"/>
 </android.support.constraint.ConstraintLayout>
