--- a/Swooh/app/src/main/res/layout/activity_main.xml
+++ b/Swooh/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".MainActivity">
+                                             tools:context=".Controller.MainActivity">
 
     <ImageView
             android:layout_width="0dp"
@@ -13,28 +13,29 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop" android:contentDescription="TODO"/>
+            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"
+            android:contentDescription="@string/background_image"/>
     <ImageView
             android:layout_width="137dp"
             android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
-            android:id="@+id/imageView2"
+            android:id="@+id/league_logo"
             android:scaleType="fitCenter" android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="16dp"/>
+            android:layout_marginRight="16dp" android:contentDescription="@string/logo_image"/>
     <TextView
-            android:text="GO ALL IN"
+            android:text="@string/go_all_in"
             android:layout_width="256dp"
             android:layout_height="62dp"
             android:id="@+id/textView2" android:textColor="?attr/colorAccent"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="50sp"
-            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/league_logo"
             android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.495"/>
     <TextView
-            android:text="ON GOING ALL OUT"
+            android:text="@string/on_going_all_out"
             android:layout_width="241dp"
             android:layout_height="33dp"
             android:id="@+id/textView3"
@@ -44,7 +45,7 @@
             android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="16dp" app:layout_constraintHorizontal_bias="0.55"/>
     <TextView
-            android:text="Find A Tean In Your City"
+            android:text="@string/find_a_team_in_your_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView5"
@@ -54,10 +55,10 @@
             android:layout_marginRight="16dp" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3"/>
     <Button
-            android:text="GET STARTED"
+            android:text="@string/get_started"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.0"
