--- a/Swooh/app/src/main/res/layout/activity_skills.xml
+++ b/Swooh/app/src/main/res/layout/activity_skills.xml
@@ -22,7 +22,7 @@
             android:id="@+id/imageView3"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="32dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.497"
             android:contentDescription="@string/back_image"
     />
@@ -41,10 +41,10 @@
             android:orientation="horizontal"
             android:layout_width="397dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            app:layout_constraintHorizontal_bias="0.6" android:layout_marginTop="60dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintHorizontal_bias="0.6" android:layout_marginTop="55dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4">
         <ToggleButton
                 android:text="@string/beginner"
@@ -71,5 +71,6 @@
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
             android:textColor="@android:color/background_light" android:textSize="24sp"
-            app:layout_constraintHorizontal_bias="0.676"/>
+            app:layout_constraintHorizontal_bias="0.489"
+            android:textAlignment="center"/>
 </android.support.constraint.ConstraintLayout>
